--- a/WebApplication1/Content/Templates/carousel.css
+++ b/WebApplication1/Content/Templates/carousel.css
@@ -53,12 +53,15 @@ body {
   background-color: #777;
 }
 .carousel-inner > .item > img {
+  margin: 0 auto;
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 50px; 
+
 }
+
 
 
 /* MARKETING CONTENT
