--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <div class="navbar-wrapper">
         <div class="container">
 
-            <nav class="navbar navbar-inverse navbar-static-top">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -41,6 +41,7 @@
                             <li class="active"><a href="~/Home/Index">Home</a></li>
                             <li><a href="~/Home/UnderConstruction">About</a></li>
                             <li><a href="~/Home/Contact">Contact</a></li>
+                            
                             <li class="dropdown">
                                 <a href="~/Home/Team" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -72,12 +73,6 @@
 <body>
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        @*<p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>*@
-        @*<i class="glyphicon-envelope"></i>test.test.com*@
-
-        <a class="btn btn-social-icon btn-twitter">
-            <span class="fa fa-twitter"></span>
-        </a>
         <!-- /.container -->
         <!-- Bootstrap core JavaScript
         ================================================== -->
@@ -85,9 +80,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 
-        <script src="~/Scripts/bootstrap.min.js"></script>">
+      
+<script src="~/Scripts/bootstrap.min.js"></script> 
         <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="../../assets/js/vendor/holder.min.js"></script>
+        @*<script src="../../assets/js/vendor/holder.min.js"></script>*@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     </footer>
