--- a/WebApplication1/Views/Account/SendCode.cshtml
+++ b/WebApplication1/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.SendCodeViewModel
+﻿@model AyanMusic.Website.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
