--- a/WebApplication1/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication1/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ChangePasswordViewModel
+﻿@model AyanMusic.Website.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
