--- a/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.RegisterViewModel
+﻿@model AyanMusic.Website.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
