--- a/WebApplication1/Views/Account/ResetPassword.cshtml
+++ b/WebApplication1/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ResetPasswordViewModel
+﻿@model AyanMusic.Website.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
