--- a/WebApplication1/Views/Account/VerifyCode.cshtml
+++ b/WebApplication1/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.VerifyCodeViewModel
+﻿@model AyanMusic.Website.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
