--- a/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ExternalLoginListViewModel
+﻿@model AyanMusic.Website.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
