--- a/WebApplication1/Views/Manage/AddPhoneNumber.cshtml
+++ b/WebApplication1/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.AddPhoneNumberViewModel
+﻿@model AyanMusic.Website.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
