--- a/WebApplication1/Views/Manage/ManageLogins.cshtml
+++ b/WebApplication1/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ManageLoginsViewModel
+﻿@model AyanMusic.Website.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
