--- a/WebApplication1/Views/Manage/SetPassword.cshtml
+++ b/WebApplication1/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.SetPasswordViewModel
+﻿@model AyanMusic.Website.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
