Get rid of Viewbag - strongly type all pages

--- a/Website/Views/Home/Contact.cshtml
+++ b/Website/Views/Home/Contact.cshtml
@@ -1,8 +1,7 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@model ContactViewModel
+
+<h2>@Model.PageTitle</h2>
+<h3>@Model.Message</h3>
 
 <address>
     One Microsoft Way<br />
