--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-
+﻿@model HomeViewModel
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
