--- a/Website/Views/Home/UnderConstruction.cshtml
+++ b/Website/Views/Home/UnderConstruction.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "UnderConstruction";
-}
+﻿@model UnderConstructionViewModel
 
-<h2>UnderConstruction</h2>
+<h2>@Model.PageTitle</h2>
 <img src="~/Content/Templates/underconstruction.jpg" alt="Under construction"/>
