--- a/Website/Views/Home/About.cshtml
+++ b/Website/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@model AboutViewModel
+
+<h2>@Model.PageTitle.</h2>
+<h3>@Model.Message</h3>
 
 <p>Use this area to provide additional information.</p>
