Fixed styles (use bundles)

--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -12,9 +12,8 @@
     <link rel="icon" href="~/favicon.ico">
     <title>@Model.PageTitle</title>
     
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
-    <link href="~/Content/Site.css" rel="stylesheet">
-    
+    @Styles.Render("~/Content/css")
+
     <!-- Custom styles for this template -->
     <link href="~/Content/Templates/carousel.css" rel="stylesheet">
 </head>
