--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -53,15 +53,16 @@
         </div>
     </nav>
 
-    @RenderBody()
-
-    <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-
-        <a class="btn btn-social-icon btn-twitter">
-            <span class="fa fa-twitter"></span>
-        </a>
-    </footer>
+    <div class="container">
+        @RenderBody()
+    
+        <footer>
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <a class="btn btn-social-icon btn-twitter">
+                <span class="fa fa-twitter"></span>
+            </a>
+        </footer>
+    </div>
     
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
