--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -7,7 +7,32 @@
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner" role="listbox">
+    <!-- Wrapper for carousel items -->
+    <div class="carousel-inner">
+        <div class="item active">
+         
+            <img src="~/Images/Tabla.jpg" alt="First Slide">
+            <div class="carousel-caption">
+                <h3>First slide label</h3>
+                <p>this is 1st slide</p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="~/Images/Header01.png" alt="Second Slide">
+            <div class="carousel-caption">
+                <h3>Second slide label</h3>
+                <p>this is 2nd slide</p>
+            </div>
+        </div>
+    <div class="item">
+
+        <img src="~/Images/Header01.png" alt="Third Slide">
+        <div class="carousel-caption">
+            <h3>Third slide label</h3>
+            <p>this is 3rd slide</p>
+        </div>
+    </div>
+    @*<div class="carousel-inner" role="listbox">
         <div class="item active">
             <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
             <div class="container">
@@ -38,15 +63,22 @@
                 </div>
             </div>
         </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    </div>*@
+    @*<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-    </a>
+    </a>*@
+
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="myCarousel"  data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control left" href="myCarousel" data-slide="next"></a>
+
 </div><!-- /.carousel -->
 <!-- Marketing messaging and featurettes
 ================================================== -->
