--- a/Website/Views/Home/Contact.cshtml
+++ b/Website/Views/Home/Contact.cshtml
@@ -29,7 +29,7 @@
                         <div class="col-md-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                <input name="email" id="email" placeholder="E-Mail Address" class="form-control" type="email">
+                                <input name="email" id="email" placeholder="E-Mail Address" class="form-control" type="email" required>
                             </div>
                         </div>
                     </div>
